--- a/package.json
+++ b/package.json
@@ -2,25 +2,28 @@
   "name": "nexusv",
   "version": "1.0.0",
   "private": true,
-  "description": "NexusV — mobile-first YouTube-like video player",
+  "description": "NexusV — Mobile-only premium YouTube-style video player",
   "scripts": {
+    "dev": "vite",
     "start": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint --ext .ts,.tsx src || true",
-    "format": "prettier --write \"src/**/*.{ts,tsx,css,html,md,json}\""
+    "format": "prettier --write \"src/**/*.{ts,tsx,css,md,json}\""
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.1.6",
-    "vite": "^5.0.0",
-    "tailwindcss": "^3.5.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0",
-    "eslint": "^8.0.0",
-    "prettier": "^2.8.0"
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.56.0",
+    "postcss": "^8.4.35",
+    "prettier": "^2.8.8",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.10"
   }
 }
